# global_context_db

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: api.py  cli.py  main.py  mcp_server.py
app/backup/: service.py
app/capture/: crawl.py  service.py
app/core/: auth.py  config.py  schemas.py
app/governance/: service.py
app/ingest/: pipeline.py
app/memory/: service.py
app/retrieval/: embedding.py  service.py
app/storage/: bootstrap.py  repo.py  vector_store.py
app/text/: chunking.py
app/web/: fetch.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/electron/: main.cjs  preload.cjs
desktop/extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
desktop/scripts/: dev.cjs  package-win.cjs
desktop/src/: App.tsx  desktopApi.ts  styles.css  types.ts  vite-env.d.ts
docs/: nas-deploy-mcp.md  nas-memory-architecture.md  reference-absorption.md  session-bridge-absorption.md
scripts/: package-nas-update.ps1  verify-nas-package.ps1
